Added example, wait for start, subscribe to Cake IProcess events, fixed command line arg quoting

--- a/src/Examples/ExampleWebApp.SubApp/index.html
+++ b/src/Examples/ExampleWebApp.SubApp/index.html
@@ -4,6 +4,6 @@
   <title>Home</title>
 </head>
 <body>
-  <h1>Example Web Application</h1>
+  <h1>Example Web Application -- Sub Application</h1>
 </body>
 </html>
